# Taskulus

./: .coveragerc  .env.example  .gitignore  .kanbus.yml  .taskulus.yml  AGENTS.md  AGENTS.override.md  CLI_REFERENCE.md  CONFIGURATION.md  CONTRIBUTING_AGENT.md  CONTRIBUTING_AGENT.template.md  GETTING_STARTED.md  INSTALL.md  MIGRATION.md  Makefile  README.md  TEST_COVERAGE_REPORT.md  TROUBLESHOOTING.md  amplify.yml  coverage.xml  dev.sh  mkdocs.yml  pytest.ini
.beads/: daemon-error  issues.jsonl
.claude/: settings.json
console/: AGENTS.md  README.md  cucumber.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
python/: .coveragerc  CHANGELOG.md  README.md  behave.ini  pyproject.toml
python/features/: environment.py
python/features/steps/: agents_steps.py  beads_interop_steps.py  comment_steps.py  common_steps.py  compatibility_steps.py  configuration_steps.py  console_snapshot_steps.py  console_ui_steps.py  content_validation_steps.py  daemon_steps.py  dependency_steps.py  discovery_steps.py  embedded_assets_steps.py  examples_steps.py  id_format_steps.py  id_generation_steps.py  index_steps.py  initialization_steps.py  issue_close_delete_steps.py  issue_creation_steps.py  issue_key_steps.py  issue_show_steps.py  issue_update_steps.py  jira_sync_steps.py  list_format_steps.py  local_issue_steps.py  maintenance_steps.py  migration_steps.py  output_steps.py  project_steps.py  query_steps.py  shared.py  virtual_project_steps.py  z_interop_steps.py
python/src/kanbus/: __init__.py  agents_management.py  beads_write.py  cli.py  cli.py.backup  cli.py.bak2  cli.py.bak4  config.py  config_loader.py  console_snapshot.py  console_ui_state.py  daemon_paths.py  dependencies.py  event_history.py  file_io.py  issue_comment.py  issue_creation.py  issue_delete.py  issue_display.py  issue_line.py  issue_listing.py  issue_lookup.py  issue_transfer.py  issue_update.py  jira_sync.py  migration.py  models.py  notification_publisher.py  project.py  workflows.py
python/src/kanbus.egg-info/: PKG-INFO  SOURCES.txt
python/src/kanbusr/: __init__.py
python/src/taskulus/: __init__.py  agents_management.py  beads_write.py  cache.py  cli.py  config.py  config_loader.py  console_snapshot.py  daemon.py  daemon_client.py  daemon_paths.py  daemon_protocol.py  daemon_server.py  dependencies.py  doctor.py  file_io.py  hierarchy.py  ids.py  index.py  issue_close.py  issue_comment.py  issue_creation.py  issue_delete.py  issue_display.py  issue_files.py  issue_line.py  issue_listing.py  issue_lookup.py  issue_update.py  maintenance.py  migration.py  models.py  project.py  project_management_template.py  workflows.py
python/tests/: conftest.py  test_cache_serialization.py  test_cli.py  test_config_loader.py  test_crud_integration.py  test_dependencies.py  test_event_history.py  test_hierarchy.py  test_id_generation.py  test_index.py  test_kanbusr.py  test_models.py  test_placeholder.py  test_workflows.py
python/tests/step_definitions/: __init__.py  initialization_steps.py
rust/: Cargo.toml  LICENSE  README.md  build.rs  install-aliases.sh
rust/embedded_assets/console/: index.html
rust/embedded_assets/console/assets/: _basePickBy-BsKUYrJU.js  _baseUniq-BSrKyfk4.js  arc-DtX4o-Ht.js  architectureDiagram-VXUJARFQ-B4_5Xkqk.js  blockDiagram-VD42YOAC-BVVSFgZR.js  c4Diagram-YG6GDRKO-C22xHbJQ.js  channel-jWnYv1d-.js  chunk-4BX2VUAB-Bn7KLBOI.js  chunk-55IACEB6-DuK2oslD.js  chunk-B4BG7PRW-B27aM4jV.js  chunk-DI55MBZ5-CJDN2VPj.js  chunk-FMBD7UC4-8oFTG0kW.js  chunk-QN33PNHL-IhDAfTDS.js  chunk-QZHKN3VN-CSlH0V2E.js  chunk-TZMSLE5B-DLf4i-9s.js  classDiagram-2ON5EDUG-4LRw1FEy.js  clone-C8ch1Khn.js  cose-bilkent-S5V4N54A-DkIwqnwG.js  dagre-6UL2VRFP-ClG6yVtu.js  diagram-PSM6KHXK-DgDuMXlQ.js  diagram-QEK2KX5R-CAE96VwX.js  diagram-S2PKOQOG-CEgNmLi3.js  erDiagram-Q2GNP2WA-BJnPxBu4.js  flowDiagram-NV44I4VS-HWiUJFeR.js  ganttDiagram-JELNMOA3-nb_5OV4x.js  gitGraphDiagram-V2S2FVAM-C7B5Btih.js  graph-BDBNLYxj.js  index-MfJh6hdE.js  index-rHBQrSpc.css  infoDiagram-HS3SLOUP-DU9fO1yg.js  journeyDiagram-XKPGCS4Q-BEAD-MtN.js  kanban-definition-3W4ZIXB7-Ucy1Avzi.js  layout-Dkqivt4y.js  linear-CNLpXxnE.js  mindmap-definition-VGOIOE7T-DYDSq-Gi.js  pieDiagram-ADFJNKIX-CjwCxb3Z.js  quadrantDiagram-AYHSOK5B-D90snBze.js  requirementDiagram-UZGBJVZJ-B_W1P2fY.js  sankeyDiagram-TZEHDZUN-C-4azwsC.js  sequenceDiagram-WL72ISMW-etYUVu8t.js  (+5 more)
rust/features/steps/: agents_steps.rs  beads_interop_steps.rs  cli_steps.rs  command_steps.rs  comment_steps.rs  compatibility_steps.rs  configuration_steps.rs  console_snapshot_steps.rs  console_ui_state_steps.rs  console_ui_steps.rs  daemon_steps.rs  dependency_steps.rs  discovery_steps.rs  embedded_assets_steps.rs  event_history_steps.rs  examples_steps.rs  id_format_steps.rs  id_generation_steps.rs  index_steps.rs  initialization_steps.rs  issue_close_delete_steps.rs  issue_creation_steps.rs  issue_key_steps.rs  issue_show_steps.rs  issue_update_steps.rs  jira_sync_steps.rs  list_format_steps.rs  local_issue_steps.rs  maintenance_steps.rs  migration_steps.rs  mod.rs  output_steps.rs  project_steps.rs  query_steps.rs  virtual_project_steps.rs  wiki_steps.rs  workflow_steps.rs
rust/src/: agents_management.rs  beads_write.rs  cache.rs  cli.rs  config.rs  config_loader.rs  console_backend.rs  console_snapshot.rs  console_telemetry.rs  console_ui_state.rs  daemon_client.rs  daemon_paths.rs  daemon_protocol.rs  daemon_server.rs  dependencies.rs  doctor.rs  error.rs  event_history.rs  file_io.rs  hierarchy.rs  ids.rs  index.rs  issue_close.rs  issue_comment.rs  issue_creation.rs  issue_delete.rs  issue_display.rs  issue_files.rs  issue_line.rs  issue_listing.rs  issue_lookup.rs  issue_transfer.rs  issue_update.rs  jira_sync.rs  lib.rs  main.rs  maintenance.rs  migration.rs  models.rs  notification_events.rs  (+7 more)
rust/tests/: crud_integration.rs  cucumber.rs  hierarchy.rs  index.rs  workflows.rs
rust/tests/step_definitions/: comment_steps.rs  initialization_steps.rs  issue_close_delete_steps.rs  issue_creation_steps.rs  issue_show_steps.rs  issue_update_steps.rs  mod.rs
(+365 files in other folders)
