[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskulus"
version = "0.1.0"
description = "A git-backed project management system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "jinja2",
    "pydantic",
    "pyyaml",
    "pydantic-settings",
    "behave",
    "coverage",
    "ruff",
    "black",
    "sphinx",
]

[project.scripts]
tsk = "taskulus.cli:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
build_command = "python -m build"
allow_zero_version = true
major_on_zero = false
