[package]
name = "taskulus"
version = "0.1.0"
edition = "2021"
description = "Taskulus command-line interface for managing issues with the Beads-backed tracker."
license = "MIT"
readme = "README.md"
repository = "https://github.com/AnthusAI/Taskulus"
homepage = "https://taskul.us"
documentation = "https://taskul.us/docs"
keywords = ["taskulus", "task-management", "issue-tracker", "cli", "beads"]
categories = ["command-line-utilities"]
authors = ["Taskulus Contributors"]

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
minijinja = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
owo-colors = "4.1"

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3.10.1"
regex = "1.10.4"
shell-words = "1.1.0"
futures = "0.3"
chrono-tz = "0.8"

[[test]]
name = "cucumber"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin)"] }

[[bin]]
name = "tskr"
path = "src/main.rs"
