[package]
name = "kanbus"
version = "0.6.0"
edition = "2021"
description = "High-performance CLI and web console for the Kanbus issue tracker. Includes kanbus (CLI) and kanbus-console (web UI server)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/AnthusAI/Kanbus"
homepage = "https://kanb.us"
documentation = "https://kanb.us/docs"
keywords = ["kanbus", "task-management", "issue-tracker", "cli", "beads"]
categories = ["command-line-utilities"]
authors = ["Kanbus Contributors"]

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
minijinja = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "v5"] }
owo-colors = "4.1"
lambda_http = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
bytes = "1.11"
http-body = "1.0"
http-body-util = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
axum = { version = "0.7", features = ["tokio", "http1"] }
mime_guess = "2.0"
rust-embed = { version = "8.5", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
native-tls = "=0.2.16"

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3.10.1"
regex = "1.10.4"
shell-words = "1.1.0"
futures = "0.3"
chrono-tz = "0.8"

[features]
default = ["embed-assets"]
embed-assets = ["rust-embed"]

[[test]]
name = "cucumber"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin)"] }

[[bin]]
name = "kbs"
path = "src/main.rs"

[[bin]]
name = "kbsc"
path = "src/bin/console_local.rs"

[lib]
name = "kanbus"
